--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: "3.11.9"
     - name: Install dependencies
       run: |
+        sudo apt install ffmpeg
         sudo apt install portaudio19-dev
         python -m pip install --upgrade pip
         pip install flake8 pytest
